# oneir-control

./: .gitignore  AUTHORS  README  configure.ac
src/: Makefile.am  amqp_oneir.sh  avr.c  avr.h  cge.h  gpio.h  gpio_smbus.c  gpio_smbus.h  gpio_spi.c  gpio_spi.h  hex.c  hex.h  intel_hex.c  intel_hex.h  oneir_app.c  oneir_app.h  oneir_bus.c  oneir_bus.h  oneir_load.c  oneir_mcu.c  oneir_mcu.h  oneird.c  override_gpio.c  override_gpio.h  sysfs_gpio.c  sysfs_gpio.h
